# qvault

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: auth.py  config.py  main.py
app/core/: auth.py  config.py  logging_config.py  tasks.py
app/models/: database.py  fa_case.py
app/routers/: auth.py  cases.py  pages.py  triage.py  upload.py
app/schemas/: fa_case.py
app/services/: data_cleaner.py  embedding.py  image_utils.py  pptx_parser.py  vlm_extractor.py  weekly_summary.py
app/templates/: base.html  case_detail.html  case_list.html  home.html  login.html  review.html  upload.html  week_detail.html
deploy/: .env.example  INSTALL.md  docker-compose.yml  fa-insight-harvester.service  nginx.conf  qvault.service  setup.sh
tests/: test_api.py
